src/main/cf/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: This stack creates a VPC constisting of two private and two public subnets, Internet Gateway,  NAT Gateway and publicly accessible Application Load Balancer

Mappings:
  Subnets:
    VPC:
      Name: 'redirector-vpc'
      CIDR: '172.54.0.0/16'
      InternetGWName: 'redirector-igw'
      RouteTableName: 'redirector-pubic-routing-table'
      ALBName: 'redirector-alb'
      TargetGroupName: 'redirector-target-group'
      ECSClusterName: 'redirector-ecs-cluster'
    PrivateOne:
      Name: 'redirector-private-subnet-az1'
      CIDR: '172.54.0.0/20'
      RouteTableName: 'redirector-private-routing-table-az1'
    PrivateTwo:
      Name: 'redirector-private-subnet-az2'
      CIDR: '172.54.16.0/20'
      RouteTableName: 'redirector-private-routing-table-az2'
    PublicOne:
      Name: 'redirector-public-subnet-az1'
      CIDR: '172.54.32.0/20'
      NATGWName: 'redirector-nat-gateway-az1'
    PublicTwo:
      Name: 'redirector-public-subnet-az2'
      CIDR: '172.54.48.0/20'
      NATGWName: 'redirector-nat-gateway-az2'

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: false
      CidrBlock: !FindInMap ['Subnets', 'VPC', 'CIDR']
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'VPC', 'Name']

  PrivateSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref VPC
      CidrBlock: !FindInMap ['Subnets', 'PrivateOne', 'CIDR']
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PrivateOne', 'Name']
  PrivateSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref VPC
      CidrBlock: !FindInMap ['Subnets', 'PrivateTwo', 'CIDR']
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PrivateTwo', 'Name']
  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref VPC
      CidrBlock: !FindInMap ['Subnets', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PublicOne', 'Name']
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref VPC
      CidrBlock: !FindInMap ['Subnets', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PublicTwo', 'Name']

  # Internet Gateway for public subnets
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'VPC', 'InternetGWName']
  InternetGatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref 'InternetGateway'

  # Route table for public subnets
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'VPC', 'RouteTableName']
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachement
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable

  # NAT Gateways for private subnets
  NATGatewayOne:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPNATOne.AllocationId
      SubnetId: !Ref PublicSubnetOne
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PublicOne', 'NATGWName']
  NATGatewayTwo:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPNATTwo.AllocationId
      SubnetId: !Ref PublicSubnetTwo
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PublicTwo', 'NATGWName']
  EIPNATOne:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachement
    Properties:
      Domain: vpc
  EIPNATTwo:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachement
    Properties:
      Domain: vpc

  # Route tables for private subnets
  PrivateRouteTableOne:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PrivateOne', 'RouteTableName']
  PrivateRouteOne:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayOne
  PrivateRouteTableOneAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableOne
      SubnetId: !Ref PrivateSubnetOne
  PrivateRouteTableTwo:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'PrivateTwo', 'RouteTableName']
  PrivateRouteTwo:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGatewayTwo
  PrivateRouteTableTwoAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTableTwo
      SubnetId: !Ref PrivateSubnetTwo

  # Load Balancer
  ALBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the public facing load balancer
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '60'
      Subnets:
        - !Ref PublicSubnetOne
        - !Ref PublicSubnetTwo
      SecurityGroups: [!Ref 'ALBSG']
      Tags:
        - Key: 'Name'
          Value: !FindInMap ['Subnets', 'VPC', 'ALBName']
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /health
      HealthCheckProtocol: HTTP
      Name: !FindInMap ['Subnets', 'VPC', 'TargetGroupName']
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref VPC
  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    DependsOn:
      - ALB
    Properties:
      DefaultActions:
        - Type: 'fixed-response'
          FixedResponseConfig:
            ContentType: text/plain
            StatusCode: 404
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
  ListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      Conditions:
        - Field: path-pattern
          Values:
            - '/redir'
      ListenerArn: !Ref ALBListener
      Priority: 1

  # Security Group for Fargate Tasks
  FargateContainerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the Fargate containers
      VpcId: !Ref VPC
  FargateContainerSGIngressFromALB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Ingress from the ALB
      GroupId: !Ref FargateContainerSG
      IpProtocol: -1
      SourceSecurityGroupId: !Ref ALBSG

  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !FindInMap ['Subnets', 'VPC', 'ECSClusterName']

Outputs:
  ClusterName:
    Description: The name of the ECS cluster
    Value: !Ref ECSCluster
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ClusterName' ] ]
  ExternalUrl:
    Description: The url of the load balancer
    Value: !Join ['', ['http://', !GetAtt 'ALB.DNSName']]
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ExternalUrl' ] ]
  VPCId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref VPC
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'VPCId' ] ]
  PublicSubnetOne:
    Description: Public subnet one
    Value: !Ref PublicSubnetOne
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PublicSubnetOne' ] ]
  PublicSubnetTwo:
    Description: Public subnet two
    Value: !Ref PublicSubnetTwo
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PublicSubnetTwo' ] ]
  PrivateSubnetOne:
    Description: Private subnet one
    Value: !Ref PrivateSubnetOne
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PrivateSubnetOne' ] ]
  PrivateSubnetTwo:
    Description: Private subnet two
    Value: !Ref PrivateSubnetTwo
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PrivateSubnetTwo' ] ]
  FargateContainerSG:
    Description: A security group used to allow Fargate containers to receive traffic
    Value: !Ref FargateContainerSG
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'FargateContainerSG' ] ]
  TargetGroup:
    Description: A target group pre-configured for future Fargate service
    Value: !Ref TargetGroup
    Export:
      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'TargetGroup' ] ]
